--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -2,21 +2,22 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>@title</title>
-    <!--    Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap/5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!--    <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned(" images/favicon.png")">-->
+
+    <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 <div class="container">
     <div class="row">
         <div id="productPanel" class="col-8">
             <div id="products" class="row">
-                <!--                Added programatically-->
+                <!--                Added programmatically-->
             </div>
         </div>
         <div id="cartPanel" class="col-4"></div>
@@ -24,6 +25,5 @@
 </div>
 @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") !=
 null)
-
 </body>
 </html>
